--- a/poker-ui-app/src/app/App.css
+++ b/poker-ui-app/src/app/App.css
@@ -1,16 +1,12 @@
 body {
-  text-align: center;
 }
 
 .App-header {
-  background-color: #000;
-  height: 160px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
+  background-color: #3c92cf;
+  height: 100px;
+  padding-top: 20px;
+  padding-left: 20px;
+  color: #ffba00;
 }
 
 .App-ticker {
