--- a/poker-ui-app/src/logo/Logo.css
+++ b/poker-ui-app/src/logo/Logo.css
@@ -1,25 +1,38 @@
 .Logo {
   position: relative;
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
 }
 
-.Logo-react {
-  animation: Logo-spin infinite 10s linear;
-  height: 100%;
-}
-
-.Logo-kotlin {
+.Logo-poker {
   opacity: 0;
   animation: Logo-spin infinite 10s 5s linear;
   height: 72%;
   position: absolute;
   top: 14%;
-  right: 24%;
+  right: 20px;
+}
+
+.Logo-text {
+    padding-left: 20px;
+    float: right;
 }
 
 @keyframes Logo-spin {
-  from { transform: rotateY(-90deg); opacity: 1 }
-  50% { transform: rotateY(90deg); opacity: 1 }
-  51% { transform: rotateY(90deg); opacity: 0 }
-  to { transform: rotateY(270deg); opacity: 0 }
+    from {
+        transform: rotateY(-90deg);
+        opacity: 1
+    }
+    50% {
+        transform: rotateY(90deg);
+        opacity: 1
+    }
+    51% {
+        transform: rotateY(90deg);
+        opacity: 0
+    }
+    to {
+        transform: rotateY(270deg);
+        opacity: 0
+    }
 }
